Agent complete but with problems running examples, this is before re-installing npm modules

--- a/platziverse-agent/package.json
+++ b/platziverse-agent/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "debug": "^3.1.0",
     "defaults": "^1.0.3",
-    "mqtt": "^2.16.0"
+    "mqtt": "^2.16.0",
+    "os": "^0.1.1",
+    "util": "^0.10.3",
+    "uuid": "^3.2.1"
   }
 }
